<?xml version="1.0"?>
<package format="2">
  <name>mujoco_manrun</name>
  <version>0.0.0</version>
  <description>The mujoco_manrun package</description>

  <maintainer email="yskk@todo.todo">yskk</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
